--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ca.polymtl.gigl.moose.kavehshahedi.bbi</groupId>
-    <artifactId>bytebuddy-instrumentor</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>java-instrumentation-agent</artifactId>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -73,15 +73,19 @@
             <version>1.14.15</version>
           </dependency>
           <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.13</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.tracecompass</groupId>
-            <artifactId>trace-event-logger</artifactId>
-            <version>0.0.4</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.20.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.20.0</version>
+          </dependency>
+          <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
         </dependency>
     </dependencies>
-
 </project>
