--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>kavehshahedi.jib</groupId>
+    <groupId>kavehshahedi</groupId>
     <artifactId>java-instrumentation-buddy</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -31,7 +31,7 @@
                             <finalName>${jar.finalName}</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>kavehshahedi.jib.JavaInstrumentationBuddy</mainClass>
+                                    <mainClass>jib.JavaInstrumentationBuddy</mainClass>
                                 </transformer>
                             </transformers>
                             <filters>
@@ -56,8 +56,8 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Premain-Class>kavehshahedi.jib.JavaInstrumentationBuddy</Premain-Class>
-                            <Agent-Class>kavehshahedi.jib.JavaInstrumentationBuddy</Agent-Class>
+                            <Premain-Class>jib.JavaInstrumentationBuddy</Premain-Class>
+                            <Agent-Class>jib.JavaInstrumentationBuddy</Agent-Class>
                             <Can-Redefine-Classes>true</Can-Redefine-Classes>
                             <Can-Retransform-Classes>true</Can-Retransform-Classes>
                             <Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>
